# omt

./: CMakeLists.txt  README.md  bunny.cell  cscope.files  cscope.in.out  cscope.out  cscope.po.out  cscope.sh  cube.cell  cube_.cell  data  delauny_circle.cell  delauny_shpere.cell  delauny_sphere.cell  delauny_sphere1.cell  delauny_sphere2.cell  face.cell  hand.cell  opt.cpp  opt.h  test_convex.off
Demo/: main.cpp  opt.cpp
Demo/include/: .Cholesky.h.swp  Cholesky.h  opt.h
