cmake_minimum_required(VERSION 2.8)
add_compile_options(-Wall -g -lstdc++)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} -std=c99)
include_directories(${PROJECT_SOURCE_DIR}/include /home/libo/Documents/c++/Viewer/include /home/libo/Documents/c++/libcell/include /home/libo/Documents/eigen/Eigen)
link_directories(${PROJECT_SOURCE_DIR}/lib /home/libo/Documents/c++/Viewer/temp_libs /home/libo/Documents/c++/libcell/temp_libs)
aux_source_directory(${PROJECT_SOURCE_DIR}/Demo mysrc)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/temp_libs)
#add_subdirectory(/src)
link_libraries(glfw3 GL m Xrandr Xi X11 Xxf86vm pthread dl Xinerama Xcursor mesh_viewer  mesh_viewer_world_manager tools_node mesh_viewer_matrix4x4 libcell)
add_executable(main ${mysrc})
#target_link_libraries(main )
